@@ -177,6 +177,14 @@ struct rt_bot_repair_info {
  */
 RT_EXPORT extern int rt_bot_repair(struct rt_bot_internal **obot, struct rt_bot_internal *ibot, struct rt_bot_repair_info *i);
 
+/* Test whether a bot is "inside-out".  This function is aware of
+ * CCW vs CW BoT orientation settings, and will interpret the
+ * results of the test accordingly.  The idea is for this function
+ * to return "1" in the same situations that would result in an
+ * OpenGL shaded drawing of the BoT to show black faces due to
+ * incorrect orientation. */
+RT_EXPORT extern int rt_bot_inside_out(struct rt_bot_internal *bot);
+
 /** @} */
 
 __END_DECLS
